--- a/FPGA/Protokoll/main.tex
+++ b/FPGA/Protokoll/main.tex
@@ -106,6 +106,7 @@ Betreuer: & \betreuer\end{tabular}}
 
 \input{Einleitung+Theorie.tex}
 \input{workshop.tex}
+\input{diskussion.tex}
 
 \nocite{*} % alle resourcen auflisten
 \printbibliography
